# new-tasmil-finance

./: .dockerignore  FINAL-CHECKLIST.md  IMPORT-UPDATES.md  MIGRATION-STATUS.md  NEXT-STEPS.md  README-MIGRATION.md  SUMMARY.md  ecosystem.config.js  pnpm-lock.yaml  setup-db.sh  turbo.json
.kiro/settings/: mcp.json
apps/ai/: .env.example  .gitignore  README.md  pyproject.toml  test_agents.py
apps/ai/api/: asgi_transport.py  asyncio.py  cli.py  command.py  config.py  cron_scheduler.py  errors.py  executor_entrypoint.py  graph.py  http.py  http_metrics.py  logging.py  metadata.py  patch.py  queue_entrypoint.py  route.py  schema.py  self_hosted_logs.py  self_hosted_metrics.py  serde.py  server.py  sse.py  state.py  store.py  stream.py  thread_ttl.py  utils.py  validation.py  webhook.py  worker.py
apps/ai/api/api/: __init__.py  a2a.py  assistants.py  mcp.py  meta.py  openapi.py  runs.py  store.py  threads.py  ui.py
apps/ai/api/auth/: custom.py  middleware.py
apps/ai/api/auth/custom/: custom_auth.py
apps/ai/api/auth/langsmith/: backend.py  client.py
apps/ai/api/grpc_ops/: ops.py
apps/ai/api/js/: remote.py  ui.py
apps/ai/api/middleware/: http_logger.py  request_id.py
apps/ai/api/models/: run.py
apps/ai/api/tunneling/: cloudflare.py
apps/ai/api/utils/: __init__.py  errors.py  future.py  headers.py  stream_codec.py
apps/ai/app/builtin/HITL/: graph.py
apps/ai/app/builtin/bridge_agent/: __init__.py  graph.py
apps/ai/app/builtin/deep_agent/: graph.py
apps/ai/app/builtin/research_agent/: __init__.py  graph.py
apps/ai/app/builtin/staking_agent/: __init__.py  graph.py
apps/ai/app/builtin/yield_agent/: __init__.py  graph.py
apps/ai/docs/: POST_threads_runs_stream_endpoint.md  QUEUE_WORKER_SYSTEM.md  how_conversation_history_is_loaded.md  queue_worker_system_architecture.md  runs_stream_join_explanation.md
apps/ai/examples/: agent_task_runner.py  application_agent_server.py  application_agent_server_stream.py  application_agent_stream_client.py  config.json  mcp_client.py  mcp_example.py  run.py  run_agent_direct.py  run_agent_direct_stream.py  staking_agent_example.py  staking_ui_example.py
apps/ai/storage/: 0000028_create_thread.up.sql  0000029_create_run.up.sql  0000031_create_embedding.up.sql  0000035_add_task_path_to_checkpoint_writes.up.sql  async_postgres_checkpointer.py  checkpoint.py  database.py  lifespan.py  ops.py  queue.py  redis.py  store.py
apps/ai/storage/migrations/: 0000000_setup_extensions.up.sql  0000027_create_assistant.up.sql  0000028_create_thread.up.sql  0000029_create_run.up.sql  0000030_create_checkpoint.up.sql  0000031_create_embedding.up.sql  0000032_create_feedback.up.sql  0000033_create_feedback_analytical_views.up.sql  0000034_add_assistant_context_description.up.sql
apps/mcp/: README.md  (+7 more)
scripts/: update-imports.sh
(+101 files in other folders)
