[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
name = "ai_agent_runner"
version = "0.0.1"
description = "Agent Runner"
authors = ["duongnghia222 <duongnghia222@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13.0"
dotenv = ">=0.9.9"
langchain-community = ">=0.3.19"
langchain-core = "1.0.0"
langchain-openai = ">=0.3.8"
langchain-anthropic = ">=0.1.4"
langchain-google-genai = ">=1.0.1"
langgraph = "1.0.2"
pydantic = ">=2.10.6"
typing-extensions = ">=4.12.2"
python-dotenv = ">=1.0.0"
langchain-mcp-adapters = ">=0.0.7"
mcp = ">=1.6.0"
playwright = ">=1.51.0"
pillow = ">=11.2.1"
fastapi = ">=0.115.12"
langchain-tavily = ">=0.1.6"
structlog = ">=25.3.0"
jsonschema-rs = ">=0.30.0"
black = ">=25.1.0"
cloudpickle = ">=3.1.1"
uvloop = ">=0.21.0"
psycopg = ">=3.2.7"
psycopg-binary = ">=3.2.7"
blockbuster = ">=1.5.24"
uvicorn = ">=0.34.2"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
psycopg-pool = "^3.2.6"
pre-commit = "^4.0.1"
ruff = "^0.12.2"
coredis = "^4.24.0"
croniter = "^6.0.0"
langgraph-checkpoint-postgres = "3.0.0"
weaviate-client = "^4.15.4"
tavily-python = "^0.7.12"
protobuf = ">=6.31.1"
langchain = "1.0.3"
wcmatch = "^10.1"
# ringkasai = { git = "ssh://git@git.barebone.ringkas.co.id/ringkas/polaris/alcor.git", branch = "develop" }

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
